Se arregla lo de los logs tanto en Service como en manejo de exepcion y se agregan los logs de trazabilidad