@@ -16,7 +16,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Slf4j
 @Service
@@ -32,37 +32,52 @@ public class OrdenarisRiskService implements EvaluarRiesgoPort {
 
     @Override
     public EvaluacionResponseDTO evaluar(SolicitudEvaluacion solicitud) {
-        log.info(">> Iniciando evaluación para empresa: {}", solicitud.getEmpresaId());
+        log.info(">> [INICIO] Evaluación de riesgo | EmpresaId: {} | Producto: {} | Monto: {}",
+                solicitud.getEmpresaId(), solicitud.getProductoFinanciero(), solicitud.getMontoSolicitado());
         try {
             // 1. Buscamos la empresa
+            log.info(">> [PASO 1] Buscando empresa en repositorio | EmpresaId: {}", solicitud.getEmpresaId());
             Empresa empresa = empresaRepo.findById(solicitud.getEmpresaId())
                     .orElseThrow(() -> new EmpresaNotFoundException(solicitud.getEmpresaId()));
-            log.info(">> Empresa encontrada: {}", empresa.getNombre());
+            log.info(">> [PASO 1] Empresa encontrada | Nombre: {}", empresa.getNombre());
 
-            // 2. Consultamos los proveedores
+            // 2. Consultamos los proveedores externos
+            log.info(">> [PASO 2] Consultando proveedores externos | EmpresaId: {}", solicitud.getEmpresaId());
             DatosContables contables = datosContablesProvider.obtenerDatosContables(solicitud.getEmpresaId());
-            HistorialPagos pagos     = historialPagosProvider.obtenerHistorialPagos(solicitud.getEmpresaId());
-            VerificacionLegal legal  = verificacionLegalProvider.obtenerVerificacionLegal(solicitud.getEmpresaId());
+            log.info(">> [PASO 2] Datos contables obtenidos correctamente");
+            HistorialPagos pagos = historialPagosProvider.obtenerHistorialPagos(solicitud.getEmpresaId());
+            log.info(">> [PASO 2] Historial de pagos obtenido correctamente");
+            VerificacionLegal legal = verificacionLegalProvider.obtenerVerificacionLegal(solicitud.getEmpresaId());
+            log.info(">> [PASO 2] Verificación legal obtenida correctamente");
 
             // 3. Empaquetamos el contexto
+            log.info(">> [PASO 3] Construyendo contexto de evaluación");
             ContextoEvaluacion contexto = new ContextoEvaluacion(solicitud, empresa, contables, pagos, legal);
+            log.info(">> [PASO 3] Contexto construido correctamente");
 
-            // 4. Ejecutamos el motor
+            // 4. Ejecutamos el motor de reglas
+            log.info(">> [PASO 4] Enviando contexto al motor de reglas");
             ResultadoEvaluacion resultadoFinal = motorReglas.evaluarRiesgo(contexto);
+            log.info(">> [PASO 4] Motor de reglas ejecutado | Nivel resultante: {}", resultadoFinal.getNivelRiesgo());
 
             // 5. Guardamos en BD
+            log.info(">> [PASO 5] Persistiendo resultado en base de datos");
             ResultadoEvaluacion guardado = resultadoRepo.save(resultadoFinal);
-            log.info(">> Evaluación completada. Empresa: {} | Nivel: {}",
-                    solicitud.getEmpresaId(), guardado.getNivelRiesgo());
+            log.info(">> [PASO 5] Resultado persistido correctamente | Id: {}", guardado.getId());
 
             // 6. Mapeamos a DTO y devolvemos
-            return mapearADTO(guardado);
+            log.info(">> [PASO 6] Mapeando resultado a DTO de respuesta");
+            EvaluacionResponseDTO respuesta = mapearADTO(guardado);
+            log.info(">> [FIN] Evaluación finalizada exitosamente | EmpresaId: {} | Nivel: {}",
+                    solicitud.getEmpresaId(), respuesta.getNivelRiesgo());
+            return respuesta;
 
         } catch (EmpresaNotFoundException ex) {
-            log.warn(">> Empresa no encontrada: {}", solicitud.getEmpresaId());
+            log.warn(">> [ERROR] Empresa no encontrada | EmpresaId: {} | Causa: {}",
+                    solicitud.getEmpresaId(), ex.getMessage(), ex);
             throw ex;
         } catch (Exception ex) {
-            log.error(">> Error al evaluar empresa: {} | Causa: {}",
+            log.error(">> [ERROR] Fallo inesperado durante la evaluación | EmpresaId: {} | Causa: {}",
                     solicitud.getEmpresaId(), ex.getMessage(), ex);
             throw new RiesgoEvaluacionException(
                     "Error al evaluar el riesgo de la empresa: " + solicitud.getEmpresaId(), ex);
@@ -76,8 +91,8 @@ public class OrdenarisRiskService implements EvaluarRiesgoPort {
                 .map(d -> EvaluacionResponseDTO.DetalleReglaDTO.builder()
                         .nombreRegla(d.getNombreRegla())
                         .resultado(d.getResultado())
-                        .build())
-                .collect(Collectors.toList());
+                        .build()).toList();
+
 
         return EvaluacionResponseDTO.builder()
                 .empresaId(entidad.getEmpresaId())
